--- a/src/assets/scss/_grid.scss
+++ b/src/assets/scss/_grid.scss
@@ -14,3 +14,8 @@
 .spacex-flex-item-pull-right {
   margin-left: auto;
 }
+
+.spacex-page-error {
+  margin: ($site-header-height * 1.5) 0;
+  padding: 1px 0;
+}
