--- a/src/assets/scss/components/_launch.scss
+++ b/src/assets/scss/components/_launch.scss
@@ -29,6 +29,7 @@
 .spacex-grid-cell--header {
   border-bottom: 1px solid $border-color-default;
   font-size: $font-size-base;
+  font-weight: 500;
   margin: 0;
   position: absolute;
   text-align: right;
