--- a/src/assets/scss/components/_site-header.scss
+++ b/src/assets/scss/components/_site-header.scss
@@ -21,3 +21,30 @@
   }
 }
 
+.spacex-loading {
+  bottom: 0;
+  height: 5px;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  transition: opacity $transition-fast ease-in, width $transition-fast ease-in;
+  width: 100%;
+  animation-duration: $transition-slow;
+  animation-name: pulse;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+
+  &.is-loading {
+    opacity: 1;
+  }
+}
+
+@keyframes pulse {
+  from {
+    background-color: $brand-primary;
+  }
+
+  to {
+    background-color: $body-color;
+  }
+}
