add prettier and eslint integration. make tsconfig a bit more strict

--- a/src/app/core/components/sort/sort.component.html
+++ b/src/app/core/components/sort/sort.component.html
@@ -2,7 +2,7 @@
   type="button"
   class="spacex-button spacex-button-link spacex-sort spacex-sort-{{sortOrderString}}"
 
-  (click)="toggleSort($event)">
+  (click)="toggleSort()">
 
   Sort
 </button>
